jsoup changelog

Release 1.16.2 [PENDING]
  * Improvement: when converting jsoup Documents to W3C Documents in W3CDom, HTML documents will be placed in the
    `http://www.w3.org/1999/xhtml` namespace by default, per the HTML5 spec. This can be controlled by setting
    `W3CDom#namespaceAware(false)`.
    <https://github.com/jhy/jsoup/pull/1848>

  * Improvement: speed optimized the `~` (any preceeding sibling) and `:nth-of-type` selectors.
    <https://github.com/jhy/jsoup/issues/1956>

  * Improvement: tweaked the performance of the Element nextElementSibling, previousElementSibling, firstElementSibling,
    lastElementSibling, firstElementChild, and lastElementChild. They now inplace filter/skip in the child-node list, vs
    having to allocate and scan a complete Element filtered list.

  * Bugfix: `form` elements and empty elements (such as `img`) did not have their attributes de-duplicated.
    <https://github.com/jhy/jsoup/pull/1950>

  * Change: removed previously deprecated methods Document#normalise, Element#forEach(org.jsoup.helper.Consumer<>),
    Node#forEach(org.jsoup.helper.Consumer<>), and the org.jsoup.helper.Consumer interface; the latter being a
    previously required compatibility shim prior to Android's de-sugaring support.

Release 1.16.1 [29-Apr-2023]
  * Improvement: in Jsoup.connect(url), natively support URLs with Unicode characters in the path or query string,
    without having to be escaped by the caller.
    <https://github.com/jhy/jsoup/issues/1914>

  * Improvement: Calling Node.remove() on a node with no parent is now a no-op, vs a validation error.
    <https://github.com/jhy/jsoup/issues/1898>

  * Bugfix: aligned the HTML Tree Builder processing steps for AfterBody and AfterAfterBody to the updated WHATWG
    standard, to not pop the stack to close <body> or <html> elements. This prevents an errant </html> closing preceding
    structure. Also added appropriate error message outputs in this case.