@@ -7,23 +7,28 @@ import javax.annotation.Nullable;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
 
 /**
  * Base combining (and, or) evaluator.
  */
 public abstract class CombiningEvaluator extends Evaluator {
-    final ArrayList<Evaluator> evaluators;
+    final ArrayList<Evaluator> evaluators; // maintain original order so that #toString() is sensible
+    final ArrayList<Evaluator> sortedEvaluators; // cost ascending order
     int num = 0;
+    int cost = 0;
 
     CombiningEvaluator() {
         super();
         evaluators = new ArrayList<>();
+        sortedEvaluators = new ArrayList<>();
     }
 
     CombiningEvaluator(Collection<Evaluator> evaluators) {
         this();
         this.evaluators.addAll(evaluators);
-        updateNumEvaluators();
+        updateEvaluators();
     }
 
     @Override protected void reset() {
@@ -33,18 +38,35 @@ public abstract class CombiningEvaluator extends Evaluator {
         super.reset();
     }
 
+    @Override protected int cost() {
+        return cost;
+    }
+
     @Nullable Evaluator rightMostEvaluator() {
         return num > 0 ? evaluators.get(num - 1) : null;
     }
     
     void replaceRightMostEvaluator(Evaluator replacement) {
         evaluators.set(num - 1, replacement);
+        updateEvaluators();
     }
 
-    void updateNumEvaluators() {
+    void updateEvaluators() {
         // used so we don't need to bash on size() for every match test
         num = evaluators.size();
+
+        // sort the evaluators by lowest cost first, to optimize the evaluation order
+        cost = 0;
+        for (Evaluator evaluator : evaluators) {
+            cost += evaluator.cost();
+        }
+        sortedEvaluators.clear();
+        sortedEvaluators.addAll(evaluators);
+        Collections.sort(sortedEvaluators, costComparator);
     }
+
+    private static final Comparator<Evaluator> costComparator = (o1, o2) -> o1.cost() - o2.cost();
+    // ^ comparingInt, sortedEvaluators.sort not available in targeted version
 
     public static final class And extends CombiningEvaluator {
         And(Collection<Evaluator> evaluators) {
@@ -56,10 +78,10 @@ public abstract class CombiningEvaluator extends Evaluator {
         }
 
         @Override
-        public boolean matches(Element root, Element node) {
-            for (int i = num - 1; i >= 0; i--) { // process backwards so that :matchText is evaled earlier, to catch parent query. todo - should redo matchText to virtually expand during match, not pre-match (see SelectorTest#findBetweenSpan)
-                Evaluator s = evaluators.get(i);
-                if (!s.matches(root, node))
+        public boolean matches(Element root, Element element) {
+            for (int i = 0; i < num; i++) {
+                Evaluator s = sortedEvaluators.get(i);
+                if (!s.matches(root, element))
                     return false;
             }
             return true;
@@ -82,7 +104,7 @@ public abstract class CombiningEvaluator extends Evaluator {
                 this.evaluators.add(new And(evaluators));
             else // 0 or 1
                 this.evaluators.addAll(evaluators);
-            updateNumEvaluators();
+            updateEvaluators();
         }
 
         Or(Evaluator... evaluators) { this(Arrays.asList(evaluators)); }
@@ -93,13 +115,13 @@ public abstract class CombiningEvaluator extends Evaluator {
 
         public void add(Evaluator e) {
             evaluators.add(e);
-            updateNumEvaluators();
+            updateEvaluators();
         }
 
         @Override
         public boolean matches(Element root, Element node) {
             for (int i = 0; i < num; i++) {
-                Evaluator s = evaluators.get(i);
+                Evaluator s = sortedEvaluators.get(i);
                 if (s.matches(root, node))
                     return true;
             }
